--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,13 @@ bin
 obj
 test/xson/bson/test1.bson
 engine_test.db
+primary.db
+primary.log
+secondary.db
+secondary.log
+tertiary.db
+tertiary.log
 yar.db
+yar.db.pid
+spike.cpp
+spike
