Library can now be created by make lib

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 bin
 obj
-test/xson/bson/test1.bson
-engine_test.db
+lib
+include
+yar.db
+yar.db.pid
 primary.db
 primary.log
 secondary.db
 secondary.log
 tertiary.db
 tertiary.log
-yar.db
-yar.db.pid
 spike.cpp
 spike
