--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "googletest"]
 	path = googletest
 	url = https://github.com/google/googletest.git
+[submodule "net4cpp"]
+	path = net4cpp
+	url = https://github.com/ruoka/net4cpp.git
+[submodule "json4cpp"]
+	path = json4cpp
+	url = https://github.com/ruoka/json4cpp.git
+[submodule "cryptic"]
+	path = cryptic
+	url = https://github.com/ruoka/cryptic.git
