--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -16,8 +16,11 @@ jobs:
       with:
         fetch-depth: 1
         submodules: true
+    - name: Install Clang 15
+      run: |
+        brew update
+        brew brew install --with-toolchain llvm
     - name: make
       run: make
     - name: make test
       run: make test
-
