--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -18,6 +18,7 @@ jobs:
         submodules: true
     - name: Install Clang 15
       run: |
+        export HOMEBREW_NO_INSTALL_CLEANUP=TRUE
         brew update
         brew install llvm
     - name: make
