--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,9 @@
         "*.c++": "cpp",
         "*.c++m": "cpp"
     },
-    "C_Cpp.default.compilerPath": "/usr/lib/llvm-15/bin/clang++",
-    "C_Cpp.default.cppStandard": "c++20",
-    "C_Cpp.default.includePath": ["${workspaceFolder}/src","${workspaceFolder}/include"],
+    "C_Cpp.default.compilerPath": "/usr/lib/llvm-18/bin/clang++",
+    "C_Cpp.default.cppStandard": "c++23",
+    "C_Cpp.default.includePath": ["${workspaceFolder}/src","${workspaceFolder}/include"],"${workspaceFolder}/YarDB"],
     "C_Cpp.default.intelliSenseMode": "clang-x64",
     "C_Cpp.errorSquiggles": "enabled",
     "terminal.integrated.gpuAcceleration": "off",
@@ -15,9 +15,8 @@
     "makefile.launchConfigurations": [
         {
             "cwd": "/workspaces/YarDB/bin",
-            "binaryPath": "/workspaces/YarDB/bin/test",
+            "binaryPath": "/workspaces/YarDB/bin/test_runner",
             "binaryArgs": []
         }
-    ],
-    "git.ignoredRepositories": ["/workspaces/json4cpp/googletest"]
+    ]
 }
