Refactor command-line parameter processing in all main programs
- Use exact equality (==) for flag matching instead of starts_with()
- Use substr() for value extraction instead of remove_prefix(find_first_not_of())
- Add continue statements for cleaner control flow
- Improve error messages with 'Error:' prefix
- Make parameter processing consistent across yardb, yarexport, yarproxy, and yarsh
- Add .editorconfig for consistent code formatting (4 spaces for C++)
- Add CONTRIBUTING.md with snake_case naming convention guidelines

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 # Build artifacts
 build/
+build-*/
 obj/
 pcm/
 bin/
 lib/
+stamps/
 
 # IDE files
-.vscode/
+.vscode/*
+!.vscode/settings.json
 .idea/
 *.swp
 *.swo
