--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,18 +5,45 @@
         "*.c++": "cpp",
         "*.c++m": "cpp"
     },
-    "C_Cpp.default.compilerPath": "/usr/lib/llvm-18/bin/clang++",
+    "C_Cpp.default.compilerPath": "/usr/lib/llvm-19/bin/clang++",
+    "C_Cpp.default.compilerArgs": [
+        "-std=c++23",
+        "-stdlib=libc++",
+        "-fexperimental-library",
+        "-pthread",
+        "-fPIC",
+        "-I/usr/include/c++/v1",
+        "-fprebuilt-module-path=${workspaceFolder}/build-linux/pcm"
+    ],
     "C_Cpp.default.cppStandard": "c++23",
-    "C_Cpp.default.includePath": ["${workspaceFolder}/src","${workspaceFolder}/include"],"${workspaceFolder}/YarDB"],
     "C_Cpp.default.intelliSenseMode": "clang-x64",
+    "C_Cpp.default.includePaths": [
+        "${workspaceFolder}/YarDB",
+        "/usr/include/c++/v1"
+    ],
     "C_Cpp.errorSquiggles": "enabled",
-    "terminal.integrated.gpuAcceleration": "off",
-    "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools",
+    "C_Cpp.configurationProvider": "ms-vscode.makefile-tools",
     "makefile.launchConfigurations": [
         {
-            "cwd": "/workspaces/YarDB/bin",
-            "binaryPath": "/workspaces/YarDB/bin/test_runner",
-            "binaryArgs": []
+            "cwd": "/workspaces",
+            "binaryPath": "/workspaces/YarDB/build-linux/bin/yardb",
+            "binaryArgs": ["--help"]
         }
-    ]
+    ],
+    "terminal.integrated.gpuAcceleration": "off",
+    "terminal.integrated.defaultProfile.linux": "bash",
+    "files.exclude": {
+        "**/build-*/**": true,
+        "**/obj/**": true,
+        "**/pcm/**": true,
+        "**/*.o": true,
+        "**/*.a": true
+    },
+    "search.exclude": {
+        "**/build-*/**": true,
+        "**/obj/**": true,
+        "**/pcm/**": true
+    },
+    "C_Cpp.default.defines": [],
+    "C_Cpp.default.browse.limitSymbolsToIncludedHeaders": false
 }
