Add tools/cb to .gitignore and remove from tracking
- tools/cb is a compiled binary and should not be tracked
- Remove from git index while keeping the file locally

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ yarsh
 yarproxy
 yarexport
 test_runner
+tools/cb
 
 ###############################################################################
 # IDE and Editor Files
