--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 1
-        submodules: true
+        submodules: recursive
     - name: Install LLVM toolchain
       run: |
         sudo apt-get update
