--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,17 +2,27 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ master ]
+    branches: [ main, master ]
 
 permissions:
   contents: read
 
 jobs:
-  build:
+  # Quick syntax check and basic build
+  build-and-test:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 25
+
+    strategy:
+      matrix:
+        config: [debug, release]
+        include:
+          - config: debug
+            cxxflags: "-O0 -g3"
+          - config: release
+            cxxflags: "-O3 -DNDEBUG"
 
     steps:
       - uses: actions/checkout@v4
@@ -44,7 +54,7 @@ jobs:
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo gpg --dearmor -o /usr/share/keyrings/apt-llvm.gpg
           echo "deb [signed-by=/usr/share/keyrings/apt-llvm.gpg] https://apt.llvm.org/$(lsb_release -cs)/ llvm-toolchain-$(lsb_release -cs)-20 main" | sudo tee /etc/apt/sources.list.d/apt-llvm.org.list > /dev/null
           sudo apt-get update -y
-          sudo apt-get install -y libc++-20-dev libc++abi-20-dev clang-20 lldb-20 lld-20 libssl-dev
+          sudo apt-get install -y libc++-20-dev libc++abi-20-dev clang-20 lldb-20 lld-20 libssl-dev jq
           sudo update-alternatives --install /usr/bin/clang   clang   /usr/bin/clang-20   100
           sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-20 100
           sudo update-alternatives --install /usr/bin/lld     lld     /usr/bin/lld-20     100
@@ -58,8 +68,120 @@ jobs:
             find /usr/lib/llvm-20 -name "std.cppm" 2>/dev/null || echo "std.cppm not found anywhere"
           fi
 
-      - name: Build project
-        run: ./tools/CB.sh debug build
+      - name: Build project (${{ matrix.config }})
+        run: ./tools/CB.sh ${{ matrix.config }} build
 
-      - name: Run tests
-        run: ./tools/CB.sh debug test
+      - name: Run tests with JSONL output (${{ matrix.config }})
+        run: ./tools/CB.sh ${{ matrix.config }} test --output=jsonl > test_results_${{ matrix.config }}.jsonl
+
+      - name: Validate JSONL output
+        run: |
+          # Check that we got valid JSONL
+          if [ ! -f "test_results_${{ matrix.config }}.jsonl" ]; then
+            echo "ERROR: JSONL output file not found!"
+            exit 1
+          fi
+
+          # Count lines and validate JSON
+          line_count=$(wc -l < "test_results_${{ matrix.config }}.jsonl")
+          echo "JSONL lines: $line_count"
+
+          # Validate JSON structure and check for required events
+          if command -v jq >/dev/null 2>&1; then
+            echo "Validating JSONL structure..."
+            jq -r '.type' "test_results_${{ matrix.config }}.jsonl" | head -10
+            echo "Checking for eof marker..."
+            last_line=$(tail -1 "test_results_${{ matrix.config }}.jsonl")
+            if echo "$last_line" | jq -e '.type == "eof"' >/dev/null 2>&1; then
+              echo "✓ EOF marker found"
+            else
+              echo "✗ EOF marker missing!"
+              exit 1
+            fi
+          fi
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results-${{ matrix.config }}
+          path: test_results_${{ matrix.config }}.jsonl
+
+  # Static analysis job
+  static-analysis:
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+          submodules: recursive
+
+      - name: Cache LLVM 20
+        uses: actions/cache@v4
+        with:
+          path: |
+            /usr/lib/llvm-20
+            /usr/bin/clang-20
+            /usr/bin/clang++-20
+          key: llvm-20-ubuntu-${{ runner.arch }}-2025-v4
+
+      - name: Install LLVM toolchain
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y clang-20 clang-tools-20 cppcheck
+
+      - name: Run clang-tidy on core files
+        run: |
+          # Run clang-tidy on key source files
+          find . -name "*.c++" -o -name "*.c++m" | head -5 | xargs -I {} sh -c '
+            echo "Analyzing {}"
+            clang-tidy-20 {} -- -std=c++23 -I/usr/lib/llvm-20/include/c++/v1 2>/dev/null || true
+          '
+
+      - name: Run cppcheck
+        run: |
+          cppcheck --enable=all --std=c++23 --language=c++ \
+            --suppress=missingIncludeSystem \
+            --suppress=unusedFunction \
+            --inline-suppr \
+            --quiet \
+            YarDB/ deps/tester/tester/ 2>/dev/null || true
+
+  # Submodule health check
+  submodule-check:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+          submodules: recursive
+
+      - name: Check submodule status
+        run: |
+          echo "=== Submodule Status ==="
+          git submodule status
+          echo ""
+          echo "=== Checking for uncommitted changes ==="
+          if git status --porcelain | grep -q .; then
+            echo "✗ Uncommitted changes found in main repo"
+            git status --porcelain
+            exit 1
+          else
+            echo "✓ Main repo is clean"
+          fi
+
+          # Check each submodule
+          for submodule in $(git submodule | awk '{print $2}'); do
+            echo "Checking $submodule..."
+            if (cd "$submodule" && git status --porcelain | grep -q .); then
+              echo "✗ Uncommitted changes in $submodule"
+              (cd "$submodule" && git status --porcelain)
+              exit 1
+            else
+              echo "✓ $submodule is clean"
+            fi
+          done
